# stand_ICP

./: README.md
legged_common/scripts/: generate_urdf.sh
legged_controllers/: CMakeLists.txt  package.xml
legged_controllers/cfg/: Tutorials.cfg
legged_controllers/config/: body_filter.yaml  elevation_mapping.yaml
legged_controllers/config/hunter/: gait.info  reference.info  task.info
legged_controllers/include/legged_controllers/: LeggedController.h  TargetTrajectoriesPublisher.h
legged_controllers/include/legged_controllers/visualization/: FootPlacementVisualization.h
legged_controllers/launch/: elevation_mapping.launch  joy_teleop.launch  one_start.launch  one_start_gazebo.launch
legged_controllers/rviz/: legged_robot.rviz
legged_controllers/src/: LeggedController.cpp  TargetTrajectoriesPublisher.cpp
legged_controllers/src/synchronized_module/: PlanarTerrainReceiver.cpp
legged_controllers/src/visualization/: FootPlacementVisualization.cpp  SphereVisualization.cpp
legged_estimation/include/legged_estimation/: LinearKalmanFilter.h  StateEstimateBase.h
legged_estimation/src/: LinearKalmanFilter.cpp  StateEstimateBase.cpp
legged_examples/legged_hunter/legged_hunter_description/: package.xml
legged_examples/legged_hunter/legged_hunter_description/launch/: empty_world.launch
legged_examples/legged_hunter/legged_hunter_description/meshes/: base_link.STL  left_elbow_pitch_Link.STL  left_shoulder_pitch_Link.STL  left_shoulder_roll_Link.STL  leg_l1_link.STL  leg_l2_link.STL  leg_l3_link.STL  leg_l4_link.STL  leg_l5_link.STL  leg_l6_link.STL  leg_r1_link.STL  leg_r2_link.STL  leg_r3_link.STL  leg_r4_link.STL  leg_r5_link.STL  leg_r6_link.STL  right_elbow_pitch_Link.STL  right_shoulder_pitch_Link.STL  right_shoulder_roll_Link.STL  zarm_l1_Link.STL  zarm_l2_Link.STL  zarm_l3_Link.STL  zarm_l4_Link.STL  zarm_l5_Link.STL  zarm_l6_Link.STL  zarm_l7_Link.STL  zarm_l_f1_link.STL  zarm_r1_link.STL  zarm_r2_link.STL  zarm_r3_link.STL  zarm_r4_link.STL  zarm_r5_link.STL  zarm_r6_link.STL  zarm_r7_link.STL  zarm_r_f1_link.STL
legged_examples/legged_hunter/legged_hunter_description/urdf/: a1.xacro  hunter.urdf  hunter.xacro  hunter_sim.urdf  hunter_sim.xacro  livox_mid360.xacro  livox_mid361.xacro  robot.xacro  sensor_d435.xacro
legged_examples/legged_hunter/legged_hunter_description/worlds/waao_world/: model.config  model.sdf
legged_gazebo/launch/: waao_world.launch
legged_gazebo/worlds/: empty_world.world  waao_world.world
legged_interface/: CMakeLists.txt  package.xml
legged_interface/include/legged_interface/: LeggedInterface.h  PerceptiveLeggedPrecomputation.h  SwitchedModelReferenceManager.h
legged_interface/include/legged_interface/common/: ModelSettings.h  Types.h
legged_interface/include/legged_interface/constraint/: FootPlacementConstraint.h
legged_interface/include/legged_interface/foot_planner/: InverseKinematics.h  SwingTrajectoryPlanner.h
legged_interface/include/legged_interface/gait/: MotionPhaseDefinition.h
legged_interface/include/legged_interface/visualization/: LeggedRobotVisualizer.h
legged_interface/src/: LeggedInterface.cpp  PerceptiveLeggedPrecomputation.cpp  SwitchedModelReferenceManager.cpp
legged_interface/src/constraint/: EndEffectorLinearConstraint.cpp  FootCollisionConstraint.cpp  FootPlacementConstraint.cpp
legged_interface/src/foot_planner/: CubicSpline.cpp  InverseKinematics.cpp  MultiCubicSpline.cpp  SwingTrajectoryPlanner.cpp
legged_interface/src/gait/: GaitSchedule.cpp
legged_interface/src/visualization/: LeggedRobotVisualizer.cpp
legged_wbc/include/legged_wbc/: HierarchicalWbc.h  WbcBase.h  WeightedWbc.h
legged_wbc/src/: HierarchicalWbc.cpp  WbcBase.cpp  WeightedWbc.cpp
